maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: type mismatch;
 found   : Unit
 required: Int
  if (murGauche && !estFaceMur())
  ^